# mcp-mike

./: .gitignore  README.md  TODO.md  concepts.json  mike-alpha-plan.md  mike-cli-bridge.md  onboard.sh  pyproject.toml  refresh-thinkers.sh  setup.sh  sync-hub.sh  thinkers.md
mcp_mike/: quiz_cli.py  server.py  tools.py
scripts/: gen-workstation-html.py
tests/: test_quiz_cli.py  test_tools.py
