[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-mike"
version = "0.1.0"
description = "Mike's personal MCP server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mcp-mike = "mcp_mike.server:main"
quiz-cli = "mcp_mike.quiz_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
